# software-eng-monorepo

./: README.md  hawkes_trades.csv
.github/workflows/: settlement-orchestrator.yml
ai-chat/: Dockerfile  build.gradle.kts  compose.yaml  endpoints.rest  settings.gradle.kts
ai-chat/src/main/resources/: application.properties
commodities/settlement-orchestrator-platform/: .dockerignore  .gitignore  Directory.Build.props  README.md  SettlementOrchestrator.sln
commodities/settlement-orchestrator-platform/docs/: RUNBOOK.md  SYSTEM_DESIGN.md
commodities/settlement-orchestrator-platform/infra/docker/: .env.example  compose.yaml
commodities/settlement-orchestrator-platform/scripts/: db-update-local.sh  dev-down.sh  dev-up.sh  helm-apply-local.sh  helm-delete-local.sh  k3s-apply-local.sh  k3s-delete-local.sh  smoke-test.sh
commodities/settlement-orchestrator-platform/src/Settlement.Api/: Dockerfile  Program.cs  README.md  Settlement.Api.csproj  Settlement.Api.http  appsettings.Development.json  appsettings.json
commodities/settlement-orchestrator-platform/src/Settlement.Application/: ApplicationAssembly.cs  README.md  Settlement.Application.csproj
commodities/settlement-orchestrator-platform/src/Settlement.Domain/: README.md
commodities/settlement-orchestrator-platform/src/Settlement.Infrastructure/: DependencyInjection.cs  InfrastructureAssembly.cs  README.md  Settlement.Infrastructure.csproj
commodities/settlement-orchestrator-platform/src/Settlement.Worker/: Dockerfile  Program.cs  (+2 more)
event-bus/: Dockerfile  Readme.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
event-bus/src/: index.redis.ts  index.ts
event-bus/src/bus/: AbstractEventBus.ts  IEventBus.ts  InMemoryEventBus.ts  RedisEventBus.ts
event-bus/src/fsm/: AbstractStateMachine.ts  IStateMachine.ts  OrderStateMachine.ts
event-bus/src/saga/: AbstractSaga.ts  ISaga.ts  OrderSaga.ts
event-bus/tests/bus/: InMemoryEventBus.test.ts
event-bus/tests/fsm/: OrderMachine.test.ts
event-bus/tests/saga/: OrderSaga.test.ts
go/multiwrite/: Readme.md  TODO.txt  buffer.go  generator.go  go.mod  main.go  writer.go
hybrid-search/: .env  Dockerfile
hybrid-search/k8s/: ingress.yml  secrets.yml
hybrid-search/scripts/: seed_elasticsearch.py
hybrid-search/v0/: .gitignore  API-Docs.md  Dockerfile  Performance-Report.md  Readme.md  docker-compose.yml
hybrid-search/v0/app/: create_magazine_indices.py  create_mock_magazine_data.py  elasticsearch_orm.py  insert_magazine_data.py  main.py  production.py  requirements.txt
hybrid-search/v1/: Pipfile  docker-compose.yml  main.py  otel-collector-config.yaml  requirements.txt  test_req_local.rest
hybrid-search/v1/k8s/: configmap.yml  service.yml
hybrid-search/v1/scripts/: test_elasticsearch.py
hybrid-search/v2/: README.md
myflix/v1/: README.md
n8n/: docker-compose.yml
practice/python/modern_setup/: .pre-commit-config.yaml  core.py  main.py  pyproject.toml
practice/python/modern_setup/tests/: test_core.py
practice/python/modern_setup/tests/features/: print_message.feature
practice/python/modern_setup/tests/features/steps/: test_steps.py
practice/rust/message_formatter/: Cargo.toml  README.md
trading/feed_processor/: live.py
trading/hawkes-process/: live.py  pyproject.toml
trading/live-market-feed/: pyproject.toml
trading/live-market-feed/visualization/: App.py  Dashboard.py  DebugPath.py  Sidebar.py
trading/llm-kline-analysis/crypto/: main.py  pyproject.toml
trading/market-analysis/: pyproject.toml  resolve.py  ticker.py
trading/market-analysis/analysis/: klines.py  orderbook.py
trading/order_book_snapshot/: pyproject.toml
trading/ticker-entropy/: app.py  monitor.py  pyproject.toml  visualize.py
trading/trading-bots/momentum-confluence/: main.py  pyproject.toml
trading/trading-bots/momentum-confluence/app/: config.py  main.py
trading/trading-bots/momentum-confluence/core/: decision.py  engine.py  rules.py
trading/trading-bots/momentum-confluence/data/: tickers.txt  trade_positions.csv
trading/trading-bots/momentum-confluence/outputs/: base.py  csv_output.py
(+152 files in other folders)
