[project]
name = "live-market-feed"
version = "0.1.0"
description = "Multi-exchange live market feed and insight dashboard"
authors = [
    { name = "settorka", email = "amedikusettor@gmail.com" }
]
requires-python = ">=3.12"

dependencies = [
    "python-dotenv>=1.1.1,<2.0.0",
    "requests>=2.32.5,<3.0.0",
    "numpy>=2.3.2,<3.0.0",
    "pandas>=2.3.2,<3.0.0",
    "aiohttp>=3.12.15,<4.0.0",
    "websockets>=12.0,<13.0",
    "streamlit>=1.39.0,<2.0.0"
]

[tool.uv]
dev-dependencies = [
    "pylint>=3.2.0,<4.0.0",
    "pytest>=8.0.0,<9.0.0",
]
